#pragma once

#include <Common/Memory.h>
#include <Texture/TexturingObjectsCreator.h>

//======================================================================================================================
namespace opengl_texture {
    class OglTextureHandles;
}

//======================================================================================================================
namespace opengl_texture {
    class OglTexturingObjectsCreator final : public texture::TexturingObjectsCreator {
    public:
        explicit OglTexturingObjectsCreator(OglTextureHandles&);

        uptr<texture::Texture> createTexture(const texture::TextureData&) override;
        uptr<texture::TextureSampler> createSampler(const texture::TextureSamplingParameters&) override;

    private:
        OglTextureHandles& _textureHandles;
    };
}
